fixes project overflow

--- a/src/Components/ProjectSection/ProjectSection.scss
+++ b/src/Components/ProjectSection/ProjectSection.scss
@@ -11,7 +11,7 @@
     position        : relative;
     background-color: $light-blue;
     @media screen and (max-width: $width-sm) {
-        height          : 1000px;
+        height          : 1100px;
     }
     main {
         display        : flex;
